--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,69 @@
-/*  your css code here. If applicable */
-.vid-container {
-  width: 100%;
-  height: 400px;
+.app{
+	width:100%;
+	height:500px;
+	position:relative;
+	margin-top:30px;
+	background:transparent;
 }
-
-.player-container {
-  display: none;
+.vid-container{
+	width:100%;
+	height:100%;
+	z-index:0;
+	position:absolute;
 }
-
-.sound-picker {
-  margin-top: 20px;
+#time-select{
+	position:absolute;
+	display:flex;
+	flex-direction:column;
+	gap:6rem;
 }
-
-.time-select {
-  margin-top: 20px;
+#time-select > button{
+	width:100px;
+	padding:10px;
+	background-color:transparent;
+	border:1px solid white;
 }
-
-.time-display {
-  font-size: 24px;
-  margin-top: 20px;
+.circle{
+	height:100px;
+	width:100px;
+	border-radius:100%;
+	position:absolute;
+	display:flex;
+	align-items:center;
+	justify-content:center;
+	margin-inline:auto;
+	top:20%;
+	left:40%;
+	border:5px solid red;
 }
-
-.play {
-  margin-top: 20px;
+.time-display{
+	position:absolute;
+	margin-inline:auto;
+	top:45%;
+	left:46%;
+}
+.sound-picker{
+	position:absolute;
+	display:flex;
+	flex-direction:column;
+	align-items:center;
+	justify-content:center;
+	gap:6rem;
+	right:10%;
+	top:13%;
+}
+.play{
+	border:none;
+	background:none;
+}
+.sound-picker > button{
+	border-radius:100%;
+	padding:15px;
+}
+.vid-container{
+	width: 100%;
+}
+#meditationVideo{
+	width: 100%;
+	height: 400px;
 }
